package Budget_App;

public interface PersistenceActor {
    public void LoadState();
    public void SaveState();    
}
